@startuml ClassDiagram
!include doc/SDS/CommonClassDiagram/ResultAndError.plantuml
skinparam classAttributeIconSize 0
skinparam linetype polyline
skinparam nodesep 50
skinparam ranksep 50
hide circle

remove IDisposable
remove DbSet<T>
remove IdentityUserLogin<T>
remove DbContext
remove IDbContext
remove IApplicationDbContext
remove ApplicationDbContext
remove IdentityDbContext<ApplicationAccount>

class BaseApiController {
    #_sender: ISender
    #_httpContextAccessor: HttpContextAccessor
}

class AccountController {
    +UnlinkAccount(method: string): async Task<IActionResult>
}

class UnlinkAccountCommand {
    +AccountId: Guid
    +Method: AccountMethod 
}

class UnlinkAccountCommandHandler {
    -_userManager: UserManager<ApplicationAccount> 
    +UnlinkAccountCommandHandler(userManager: UserManager<ApplicationAccount>)
    +Handle(request: UnlinkAccountCommand,cancellationToken: CancellationToken): Task<Result> 
    -UnlinkEmail(request: UnlinkAccountCommand,cancellationToken: CancellationToken): Task<Result>
    -UnlinkPhone(request: UnlinkAccountCommand,cancellationToken: CancellationToken): Task<Result>
}

class AccountError {
    {static} +NotFound: Error
    {static} +InvalidAccountMethod: Error
    {static} +OnlyExistOneIdentifier: Error
}

enum AccountMethod {
    Phone
    Email
    Username
    Google
}

!include doc/SDS/CommonClassDiagram/Account/AccountDbContext.plantuml 

' =========== Library class ===========
interface "IRequest<TResponse>" #black;line:white;text:white
interface "IRequestHandler<TRequest, TResponse>" #black;line:white;text:white
class "UserManager<TUser>" #black;line:white;text:white
' =========== Library class ===========

AccountController --|> BaseApiController
AccountController "1" -- "1" UnlinkAccountCommand
UnlinkAccountCommand "1" o-- "1" AccountMethod
UnlinkAccountCommand ..|> "IRequest<TResponse>"

UnlinkAccountCommandHandler ..|> "IRequestHandler<TRequest, TResponse>"
UnlinkAccountCommandHandler "1" -- "1" UnlinkAccountCommand
UnlinkAccountCommandHandler "1" o-- "1" "UserManager<TUser>"

UnlinkAccountCommandHandler "1" -- "1..*" AccountError
UnlinkAccountCommandHandler "1" -- "1..*" Result
UnlinkAccountCommandHandler "1" ---"1..*" ApplicationAccount

Error "1..*" --o "1" AccountError

@enduml